--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
         
     /* On small screens, set height to 'auto' for the grid */
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 200px) {
       .row.content {height: auto;} 
     }
   </style>
@@ -65,12 +65,9 @@
         </div>
        </div>
         <div class="col-sm-3">
-        <h4>Wins</h4>
-          <div class="new">
-          <div id = "w">
-                <p><br><h1>:30</h1></p>
+            <div id = "timer">
+                <p><h1>:30</h1></p>
             </div>    
-            </div>
           </div>
         </div>
         <div class="row">
@@ -78,7 +75,7 @@
         <h4>Wins</h4>
           <div class="well">
           <div id = "W">
-                <p>Total Losses<br><h6>0</h6></p>
+                <p><h6>0</h6></p>
             </div>
           </div>
         </div>
@@ -86,21 +83,19 @@
         <h4>losses</h4>
           <div class="well">
           <div id = "L">
-                <p>Total Losses<br><h6>0</h6></p>
+                <p><h6>0</h6></p>
             </div>
           </div>
         </div>
         <div class="col-sm-2">
-        <h4>Reset</h4>
-          <div class="well">
-          <div id = "L">
-                <h4></h4>
-                <p><br><h6></h6></p>
-                <button id="crystalspurple"></button>
+        <h4></h4>
+         <div class="well">
+          <div id = "start">
+              <h4>start</h4> 
             </div>
           </div>
         </div>
-    </div><img src="assets/images/purp_gem.png">
+    </div>
   
  </div> 
 
