--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,9 @@
 
 <div class="container-fluid">
 
- 
+           
+IFRAME EMBED
+<iframe src="//giphy.com/embed/aEeu8w2OkZv7W" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/happy-excited-celebration-aEeu8w2OkZv7W">via GIPHY</a></p>
 
     <div class="col-sm-9">
       <div class="well">
