--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="well">
             <div id = "multiplechoice">
           <ul class="list-group">
-  <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
+  <li class="list-group-item list-group-item-success"><p>0</p></li>
   <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
   <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
   <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
