--- a/index.html
+++ b/index.html
@@ -49,19 +49,23 @@
         <div class="col-sm-3">
           <h4>Answers</h4>
           <div class="well">
+            
             <div id = "multiplechoice">
-          <ul class="list-group">
-  <li class="list-group-item list-group-item-success"><p>0</p></li>
-  <li class="list-group-item list-group-item-info">Cras sit amet nibh libero</li>
-  <li class="list-group-item list-group-item-warning">Porta ac consectetur ac</li>
-  <li class="list-group-item list-group-item-danger">Vestibulum at eros</li>
+          
+      <ul class="list-group">
+  <div id = "1q"><li><p>0</p></li>
+  </div>
+  
+  <div id = "2q"><li><p>0</p></li>
+  </div>
+  
+  <div id = "3q"><li><p>0</p></li>
+  </div>
+  
+  <div id = "4q"><li><p>0</p></li>
+  </div>
 </ul>
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-info">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-info">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-info">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-info">Porta ac consectetur ac</a>
-</div> 
+
             </div> 
           </div>
         </div>
@@ -74,7 +78,7 @@
         </div>
        </div>
         <div class="col-sm-3">
-            <div id = "timer">
+            <div id = "clock">
                 <p><h1>:30</h1></p>
             </div>    
           </div>
