working on timer, reset

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <div id = "multiplechoice">
           
       <ul class="list-group">
-  <div id = "1q"><li><p>0</p></li>
+  <div id = "1q"><li><p></p></li>
   </div>
   
-  <div id = "2q"><li><p>0</p></li>
+  <div id = "2q"><li><p></p></li>
   </div>
   
-  <div id = "3q"><li><p>0</p></li>
+  <div id = "3q"><li><p></p></li>
   </div>
   
-  <div id = "4q"><li><p>0</p></li>
+  <div id = "4q"><li><p></p></li>
   </div>
 </ul>
 
@@ -73,7 +73,7 @@
         <h4>Right or Wrong</h4>
           <div class="well">
           <div id = "score">
-            <h5> 0</h5>
+            <h6> </h6>
           </div>
         </div>
        </div>
